core/tests/snapshots/mail_fixtures__forward_freelancermap.snap
---
source: core/tests/mail_fixtures.rs
expression: "describe(std::fs::read(&path).unwrap())"
---
freelancermap.de | Fwd: freelancermap-Alert | Ich
- freelancermap:2990003 | Senior DevOps Engineer (w/m/d) | Beispiel Systems SE | Rotenburg Wümme | https://www.freelancermap.de/nproj/2990003.html
- freelancermap:2990004 | IT-Architekt (m/w/d) | Nordwind Beispiel | Remote | https://www.freelancermap.de/nproj/2990004.html
