core/tests/snapshots/mail_fixtures__forward_linkedin.snap
---
source: core/tests/mail_fixtures.rs
expression: describe(bytes)
---
linkedin.com | Fwd: LinkedIn-Alert | Ich
- linkedin:4990000001 | Senior Controller (m/w/d) | Musterwerke GmbH | Köln, Nordrhein-Westfalen | https://www.linkedin.com/jobs/view/4990000001/
- linkedin:4990000002 | Interim CFO | Nordlicht AG | Hamburg (Hybrid) | https://www.linkedin.com/jobs/view/4990000002/
